package edu.hitsz.supply.obs;

/**
 * Observer.puml interface
 * @author Kosmischer
 * */

public interface AbstractObserver {

    /**
     * Response when witnessing certain occurrence
     * */
    public abstract void response();
}
